# platform-raspberrypi

./: .gitignore  .gitmodules  README.md  platform.json  platform.py  pyproject.toml
.github/workflows/: examples.yml
boards/: featherrp2040.json  nanorp2040connect.json  newsan_archi.json  pico.json  pimoroni_pga2040.json  seeed_xiao_rp2040.json  trex-one.json
builder/: main.py
builder/frameworks/: picosdk.py
builder/frameworks/arduino/: arduino.py
examples/arduino-blink/: README.md  README.rst  platformio.ini
examples/arduino-blink-earlephilhower/: README.md  platformio.ini
examples/arduino-blink-earlephilhower/src/: main.cpp
examples/arduino-external-libs/: README.md  README.rst  platformio.ini
examples/arduino-ota/: README.md  platformio.ini
examples/arduino-signed-ota/: README.md
examples/arduino-signed-ota/src/: main.cpp
examples/arduino-wifi-scan/: README.md  platformio.ini
examples/arduino-wifi-scan/src/: main.cpp
examples/picosdk-blink/: platformio.ini
examples/picosdk-blink/src/: main.c
tests/: conftest.py  test_setup_validation.py
